# line_edit

./: .gitignore  Cargo.toml  LICENSE  LICENSE.APACHE-2.0  README.md
dev_docs/: features.md
docs/dev/: archetecture.md  command_grammar.md  design.md  features.md
docs/user/: features.md
line_input/src/: lib.rs
line_reader/: Cargo.toml
line_reader/dev_docs/: design.md  repaint.md
line_reader/src/: edit_buffer.rs  history_stack.rs  lib.rs  render_context.rs  renderer.rs
lned/: Cargo.toml
lned/docs/: manual.md
lned/src/: cli.rs  command.rs  edit_buffer.rs  main.rs  main_loop.rs
lned/src/edit_buffer/: undo_stack.rs
src/: cli.rs  cmd.rs  command.rs  edit_buffer.rs  history_stack.rs  lib.rs  main.rs  main_loop.rs  renderer.rs
src/edit_buffer/: operation.rs  undo_stack.rs
