[package]
name = "line_edit"
description = "accept a line of input (similar to read-line)"
version = "0.6.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"


[dependencies]
crossterm = "0.29.0"
regex = "1.12.2"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

[lints.rust]
elided_lifetimes_in_paths = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
pedantic = "warn"

[dev-dependencies]
similar-asserts = "2.0.0"
