[package]
name = "line_edit"
description = "accept a line of input (similar to read-line)"
version = "0.7.1"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Sindisil/line_edit"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["cli", "input", "read_line"]
authors = ["Greg A. Jandl"]


[dependencies]
crossterm = "0.29.0"
regex = "1.12.2"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

[lints.rust]
elided_lifetimes_in_paths = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
pedantic = "warn"
partial_pub_fields = "warn"
unnecessary_self_imports = "warn"
separated_literal_suffix = "warn"
allow_attributes = "warn"
items_after_test_module = "warn"
std_instead_of_core = "warn"
unused_trait_names = "warn"

[dev-dependencies]
similar-asserts = "2.0.0"
